# python-epics-tutorials

./: README.md  pyproject.toml
src/python_epics_tutorials/: __init__.py
src/python_epics_tutorials/pcaspy_tutorials/: ex1_client.py  ex1_server_random_number.py
src/python_epics_tutorials/pcaspy_tutorials/ex1_random_numbers/: client.py  server.py
src/python_epics_tutorials/pcaspy_tutorials/ex2_shell/: client.py  server.py
src/python_epics_tutorials/pcaspy_tutorials/ex3_oscilloscope_simulation/: client.py  simscope.py
